# AloFootMind

./: .gitignore  Makefile  README.md  data-analysis.md  docker-compose.yml  etl-reingestion-summary.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: graph.py  state.py  utils.py
backend/app/agents/subgraphs/: post_match.py  pre_match.py  qa.py
backend/app/api/routes/: analysis.py  auth.py  competitions.py  matches.py
backend/app/core/: config.py  security.py
backend/app/db/: milvus_client.py  milvus_init.py  models.py  postgres.py
backend/app/etl/: ingestion_log.py  milvus_writer.py  parser.py  pipeline.py  text_generator.py
backend/app/services/: email.py  embedder.py  llm_client.py  rag_service.py
backend/scripts/: add_role_and_trial_expires.py  create_trial.py  ingest.py  reset_etl.py  seed_mock.py  update_events_aggregated.py
frontend/: Dockerfile  README.md  design.css  design_dark.css  design_dark.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: design.css  design.html  design_dark.html
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: index.ts
frontend/src/components/: AgentViewer.vue  AppLayout.vue  AuthModal.vue  ConfirmDialog.vue  LoadingOverlay.vue  ReportViewer.vue  SearchableSelect.vue  ToastNotification.vue
frontend/src/composables/: useMarkdown.ts  useSseStream.ts
frontend/src/i18n/: en.ts  index.ts  zh.ts
(+15 files in other folders)
