[project]
name = "alofootmind-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.20",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "redis[hiredis]==5.2.1",
    "pymilvus==2.5.0",
    "langchain==0.3.14",
    "langchain-openai==0.3.0",
    "langchain-community==0.3.14",
    "langgraph==0.2.60",
    "openai==1.59.4",
    "httpx==0.28.1",
    "sentence-transformers==3.3.1",
    "torch==2.5.1",
    "FlagEmbedding==1.3.3",
    "python-dotenv==1.0.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "orjson==3.10.12",
    "numpy==2.2.1",
    "setuptools<72",
    "pyjwt==2.10.1",
    "bcrypt==4.2.1",
    "resend==2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
